--- a/src/frontend/src/index.scss
+++ b/src/frontend/src/index.scss
@@ -1,16 +1,4 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+/* base styling */
 * {
 	margin: 0;
 	padding: 0;
@@ -22,9 +10,40 @@ code {
 	-webkit-appearance: none;
 	box-sizing: border-box;
 }
+*:focus {
+	-webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important;
+	-webkit-focus-ring-color: rgba(255, 255, 255, 0) !important;
+	outline: none !important;
+}
+input[type='checkbox'] {
+	-webkit-appearance: checkbox;
+}
+input[type='radio'] {
+	-webkit-appearance: radio;
+}
+body {
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
 html,
 body,
 #root {
 	min-height: 100%;
 	height: 100%;
+}
+body {
+	padding-top: 3.5rem;
+}
+
+@media (max-width: 769px) {
+	html {
+		font-size: 14px;
+	}
+	#root {
+		display: block;
+	}
 }
