--- a/src/frontend/src/components/UI/Theme/Theme.module.scss
+++ b/src/frontend/src/components/UI/Theme/Theme.module.scss
@@ -1,6 +1,18 @@
+@use '../../../constants/style/themify.scss' as *;
+
 .theme {
-	min-height: 100%;
+	flex: 1;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	@include themify($themes) {
+		background-color: themed('background-color');
+	}
+}
+
+.theme-root {
+	min-height: 100%;
+	display: flex;
+	flex-direction: column;
+	flex: 1;
 }
