--- a/src/frontend/src/index.scss
+++ b/src/frontend/src/index.scss
@@ -22,6 +22,9 @@ input[type='radio'] {
 	-webkit-appearance: radio;
 }
 body {
+	font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+		'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+		'Helvetica Neue', sans-serif;
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
 	-khtml-user-select: none;
@@ -34,9 +37,6 @@ body,
 #root {
 	min-height: 100%;
 	height: 100%;
-}
-body {
-	padding-top: 3.5rem;
 }
 
 @media (max-width: 769px) {
