--- a/src/frontend/src/components/Navbars/LeftNav/LeftNav.module.scss
+++ b/src/frontend/src/components/Navbars/LeftNav/LeftNav.module.scss
@@ -1,7 +1,6 @@
 @use '../../../constants/style/themify.scss' as *;
 .left-nav {
 	padding-top: 5rem;
-	grid-column: 1;
 	@include themify($themes) {
 		background-color: themed('navbar');
 	}
@@ -12,19 +11,22 @@
 	display: flex;
 	flex-direction: column;
 }
-.left-nav li {
+
+.left-nav a {
+	display: flex;
+	align-items: center;
+	transition: color 0.2s;
+	font-size: 1rem;
+	text-decoration: none;
 	padding: 0.5rem 1rem;
 	transition: background-color 250ms;
 	&:hover {
 		background-color: rgba(255, 255, 255, 0.1);
 	}
-}
-
-.left-nav a {
-	transition: color 0.2s;
-	font-size: 1rem;
-	text-decoration: none;
 	@include themify($themes) {
 		color: themed('on-navbar');
 	}
+}
+.left-nav svg {
+	margin-right: 1rem;
 }
