--- a/src/frontend/src/components/Navbars/LeftNav/LeftNav.module.scss
+++ b/src/frontend/src/components/Navbars/LeftNav/LeftNav.module.scss
@@ -1,6 +1,8 @@
 @use '../../../constants/style/themify.scss' as *;
 .left-nav {
 	padding-top: 5rem;
+	flex: 1;
+	max-width: 14rem;
 	@include themify($themes) {
 		background-color: themed('navbar');
 	}
