--- a/src/frontend/src/components/UserEvents/Button/Button.module.scss
+++ b/src/frontend/src/components/UserEvents/Button/Button.module.scss
@@ -1,12 +1,50 @@
-.button{
-    background-color: #5336FF;
-    color: white;
-    font-weight: bold;
-    border-radius: 0.25rem;
-    padding: 0.5rem 1rem;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, .1);
-    &:hover{
-        background-color: #5c40fa;
-        cursor: pointer;
-    }
+@use '../../../constants/style/themify.scss' as *;
+.button {
+	font-weight: bold;
+	border-radius: 0.25rem;
+	padding: 0.5rem 1rem;
+	box-shadow: rgba(5, 25, 45, 0.25) 0px 0px 2px 0px;
+	border: 2px solid transparent;
+	transition: all 500ms;
+	&:hover {
+		cursor: pointer;
+	}
+}
+
+.button-primary {
+	@include themify($themes) {
+		color: themed('on-primary');
+		background-color: themed('primary');
+	}
+	&:hover {
+		@include themify($themes) {
+			background-color: themed('primary-hover');
+		}
+	}
+}
+
+.button-secondary {
+	box-shadow: none;
+	@include themify($themes) {
+		color: themed('primary');
+		border-color: themed('primary');
+	}
+	&:hover {
+		@include themify($themes) {
+			color: themed('primary-hover');
+			border-color: themed('primary-hover');
+		}
+	}
+}
+
+.button-card {
+	@include themify($themes) {
+		color: themed('on-surface');
+		background-color: themed('surface');
+	}
+	&:hover {
+		box-shadow: rgba(5, 25, 45, 0.25) 0px 0px 2px 0px,
+			rgba(5, 25, 45, 0.3) 0px 2px 4px -1px;
+		transform: translate(0px, -1px);
+	}
 }
