--- a/src/frontend/src/pages/Dashboard/ManageCards/ManageCards.module.scss
+++ b/src/frontend/src/pages/Dashboard/ManageCards/ManageCards.module.scss
@@ -2,3 +2,17 @@
 	min-height: 100%;
 	flex: 5;
 }
+
+.chapters,
+.lessons {
+	animation: show 250ms ease-in;
+}
+
+@keyframes show {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
