--- a/src/frontend/src/components/UI/Carousel/Carousel.module.scss
+++ b/src/frontend/src/components/UI/Carousel/Carousel.module.scss
@@ -2,6 +2,8 @@
 .carousel {
 	position: relative;
 	margin: 1rem 0rem;
+	padding-left: 2rem;
+	margin-right: 2rem;
 	overflow: hidden;
 	min-width: 0;
 }
