--- a/src/frontend/src/constants/style/themify.scss
+++ b/src/frontend/src/constants/style/themify.scss
@@ -41,3 +41,7 @@
 @function isMap($var) {
 	@return type-of($var) == 'map';
 }
+
+@function getColorInTheme($theme, $key) {
+	@return map-get(map-get(t.$themes, $theme), $key);
+}
