--- a/src/frontend/src/pages/Dashboard/ManageCards/ManageCards.module.scss
+++ b/src/frontend/src/pages/Dashboard/ManageCards/ManageCards.module.scss
@@ -2,3 +2,10 @@
 	display: block;
 	margin: auto;
 }
+.cards-list {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	gap: 2rem;
+	justify-content: space-evenly;
+}
