--- a/src/frontend/src/components/UserEvents/Form/Form.module.scss
+++ b/src/frontend/src/components/UserEvents/Form/Form.module.scss
@@ -17,7 +17,7 @@
 	margin: 1rem 0;
 	font-size: 1.5rem;
 	@include themify($themes) {
-		background-color: themed('on-surface');
+		color: themed('on-surface');
 	}
 }
 .logo {
