--- a/src/frontend/src/pages/Dashboard/ManageCards/ManageCards.module.scss
+++ b/src/frontend/src/pages/Dashboard/ManageCards/ManageCards.module.scss
@@ -3,9 +3,11 @@
 	margin: auto;
 }
 .cards-list {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
 	gap: 2rem;
-	justify-content: space-evenly;
+}
+
+.card {
+	flex: 1;
 }
