--- a/src/frontend/src/components/Navbars/LeftNav/LeftNav.module.scss
+++ b/src/frontend/src/components/Navbars/LeftNav/LeftNav.module.scss
@@ -22,8 +22,14 @@
 	text-decoration: none;
 	padding: 0.5rem 1rem;
 	transition: background-color 250ms;
-	&:hover {
+	&:hover,
+	&:focus-visible {
 		background-color: rgba(255, 255, 255, 0.1);
+	}
+	&:focus-visible {
+		@include themify($themes) {
+			box-shadow: inset 0px 0px 0px 2px themed('on-navbar');
+		}
 	}
 	@include themify($themes) {
 		color: themed('on-navbar');
