--- a/src/frontend/src/index.scss
+++ b/src/frontend/src/index.scss
@@ -6,14 +6,14 @@
 	background-color: transparent;
 	-webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important;
 	-webkit-focus-ring-color: rgba(255, 255, 255, 0) !important;
-	outline: none !important;
+	outline: none;
 	-webkit-appearance: none;
 	box-sizing: border-box;
 }
 *:focus {
 	-webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important;
 	-webkit-focus-ring-color: rgba(255, 255, 255, 0) !important;
-	outline: none !important;
+	outline: none;
 }
 input[type='checkbox'] {
 	-webkit-appearance: checkbox;
