frontend: added authentification

--- a/src/frontend/src/components/Navbars/Header/Header.module.scss
+++ b/src/frontend/src/components/Navbars/Header/Header.module.scss
@@ -115,7 +115,9 @@
 		color: themed('primary');
 	}
 }
-
+.logout {
+	margin: 0.5rem 0px;
+}
 .brand-name a {
 	display: flex;
 	flex-direction: row;
