--- a/src/frontend/src/components/Navbars/LeftNav/LeftNav.module.scss
+++ b/src/frontend/src/components/Navbars/LeftNav/LeftNav.module.scss
@@ -22,7 +22,9 @@
 	text-decoration: none;
 	padding: 0.5rem 1rem;
 	transition: background-color 250ms;
-	&:hover,
+	&:hover {
+		background-color: rgba(255, 255, 255, 0.1);
+	}
 	&:focus-visible {
 		background-color: rgba(255, 255, 255, 0.1);
 	}
